sticky header issue and text width too long issue

--- a/src/components/ContentBlocks/TextAreaBlock/textAreaBlock.module.css
+++ b/src/components/ContentBlocks/TextAreaBlock/textAreaBlock.module.css
@@ -6,3 +6,16 @@
     align-items: center;
     padding: var(--padding-18) var(--padding-xs-36);
 }
+.innerCont{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+@media(min-width:900px){
+    .innerCont{
+        width: 80%;
+        max-width: 900px;
+    }
+}
